title icon + fixed overflowed message

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -81,6 +81,7 @@ body {
           font-weight: 600;
         }
         .text {
+          overflow: auto;
           padding-top: 0.5rem;
         }
         &:not(:nth-child(1)) {
